Accidental overwrite fix.

--- a/styles/css/popup-pp.css
+++ b/styles/css/popup-pp.css
@@ -100,4 +100,4 @@ body {
         transform: rotate(37deg);
         top: 10px; }
 
-/*# sourceMappingURL=popup.css.map */
+/*# sourceMappingURL=popup-pp.css.map */
