--- a/styles/scss/banner-pp.scss
+++ b/styles/scss/banner-pp.scss
@@ -24,34 +24,6 @@
 }
 
 @font-face {
-    font-family: 'FSMeP';
-    font-weight: 300;
-    font-style: normal;
-    src: url('../../fonts/fsme/FSMe-P-Light.woff') format('woff');
-}
-
-@font-face {
-    font-family: 'FSMeP';
-    font-weight: 400;
-    font-style: normal;
-    src: url('../../fonts/fsme/FSMe-P.woff') format('woff');
-}
-
-@font-face {
-    font-family: 'FSMeP';
-    font-weight: 700;
-    font-style: normal;
-    src: url('../../fonts/fsme/FSMe-P-Bold.woff') format('woff');
-}
-
-@font-face {
-    font-family: 'FSMeP';
-    font-weight: 800;
-    font-style: normal;
-    src: url('../../fonts/fsme/FSMe-P-Black.woff') format('woff');
-}
-
-@font-face {
     font-family: 'Muli';
     font-weight: 300;
     font-style: normal;
@@ -511,7 +483,7 @@ span {
 
 @media screen and (max-height: 600px) and (orientation: landscape) {
     .hidden .showHide {
-        height: 40px;
-        background-position: 50% 0;
+        // height: 40px;
+        // background-position: 50% 0;
     }
 }
