--- a/styles/scss/banner-pp.scss
+++ b/styles/scss/banner-pp.scss
@@ -90,11 +90,6 @@ span {
     }
 }
 
-.showHide {
-    right: calc(0% + 6px);
-    transition: all 0.8s;
-}
-
 .gotIt-button {
     left: 8px;
 }
@@ -116,29 +111,44 @@ span {
         cursor: pointer;
         height: 28px;
         bottom: 6px;
+
+        &.survey {
+            right: calc(0% + 6px);
+            transition: all 0.8s;
+            background: #39a944;
+            color: white;
+            font-weight: 400;
+            letter-spacing: 0.05em;
+            font-size: 13px;
+        }
+
+        &.showHide {
+            left: calc(0% + 6px);
+            transition: all 0.8s;
+        }
     }
 }
 
 .hidden {
-    .showHide {
-        width: 35px;
-        height: 36px;
-        right: calc(50% - 0px);
-        bottom: 0px;
-        border-radius: 0;
-        background: url(../../images/announcement.svg) 50% no-repeat;
-        cursor: pointer;
-        transform: translate(50%, 0px);
-        width: 76px;
-        height: 32px;
-
-        p {
-            opacity: 0;
-        }
-    }
-
     .announcementBanner {
         background: #cdd5e4;
+
+        button.showHide {
+            width: 35px;
+            height: 36px;
+            left: calc(50% - 0px);
+            bottom: 0px;
+            border-radius: 0;
+            background: url(../../images/announcement.svg) 50% no-repeat;
+            cursor: pointer;
+            transform: translate(-50%, 0px);
+            width: 76px;
+            height: 32px;
+
+            p {
+                opacity: 0;
+            }
+        }
 
         .bannerImage {
             opacity: 0;
@@ -207,6 +217,10 @@ span {
         line-height: 1.25em;
         font-weight: 400;
         max-width: 582px;
+
+        .standOut {
+            font-weight: 800;
+        }
     }
 }
 
