--- a/styles/css/banner-pp.css
+++ b/styles/css/banner-pp.css
@@ -89,21 +89,23 @@ span.smallSpace {
     transition: all 0.8s; }
   .announcementBanner button.showHide {
     right: calc(0% + 6px);
-    transition: all 0.8s; }
+    transition: all 0.8s;
+    background: #d0d8e5 url(../../images/announcement.svg) 280px 50% no-repeat; }
 
 .hidden .announcementBanner {
   background: #cdd5e4; }
   .hidden .announcementBanner button.showHide {
     width: 35px;
     height: 36px;
-    left: calc(50% - 0px);
+    right: calc(50% - 0px);
     bottom: 0px;
     border-radius: 0;
-    background: url(../../images/announcement.svg) 50% no-repeat;
     cursor: pointer;
-    transform: translate(-50%, 0px);
+    transform: translate(50%, 0px);
     width: 76px;
-    height: 32px; }
+    height: 32px;
+    background-color: #ccd5e3;
+    background-position-x: 50%; }
     .hidden .announcementBanner button.showHide p {
       opacity: 0; }
   .hidden .announcementBanner .bannerImage {
@@ -127,13 +129,12 @@ span.smallSpace {
     font-weight: 800;
     color: #3f3c4f; }
   .announcementBanner .bannerImage {
-    background: #ebeef3 url(../../images/personal_profiles_launch2.png) 50% -18px/auto 98% no-repeat;
-    width: 100%;
     height: 110px;
-    opacity: 1;
-    transition-delay: 0.1s;
-    margin: 14px 0 0px;
-    padding: 4px 0px; }
+    margin: -4px 0 24px 8px;
+    transition: opacity 0.6s; }
+    .announcementBanner .bannerImage img {
+      height: 110%;
+      width: auto; }
   .announcementBanner .titlesAndButtons {
     display: flex;
     flex-direction: column;
@@ -342,13 +343,18 @@ span.smallSpace {
 
   .bannerText {
     font-size: 15px; } }
-@media screen and (max-width: 620px) {
+@media screen and (max-width: 540px) {
+  .announcementBanner .titles {
+    padding: 0 12px; }
   .announcementBanner .mainTitle {
-    font-size: 0.9em;
+    font-size: 1.1em;
     padding: 0px 0.6em 0.6em; }
   .announcementBanner .surOrSubTitle {
     font-size: 62%;
     line-height: 1.15em;
-    padding: 0 12px; } }
+    padding: 0 12px; }
+  .announcementBanner .bannerImage {
+    height: 80px;
+    margin-bottom: 40px; } }
 
 /*# sourceMappingURL=banner-pp.css.map */
