--- a/styles/scss/banner-pp.scss
+++ b/styles/scss/banner-pp.scss
@@ -120,6 +120,8 @@ span {
         &.showHide {
             right: calc(0% + 6px);
             transition: all 0.8s;
+            background: #d0d8e5 url(../../images/announcement.svg) 280px 50%
+                no-repeat;
         }
     }
 }
@@ -131,14 +133,15 @@ span {
         button.showHide {
             width: 35px;
             height: 36px;
-            left: calc(50% - 0px);
+            right: calc(50% - 0px);
             bottom: 0px;
             border-radius: 0;
-            background: url(../../images/announcement.svg) 50% no-repeat;
             cursor: pointer;
-            transform: translate(-50%, 0px);
+            transform: translate(50%, 0px);
             width: 76px;
             height: 32px;
+            background-color: #ccd5e3;
+            background-position-x: 50%;
 
             p {
                 opacity: 0;
@@ -172,14 +175,14 @@ span {
     }
 
     .bannerImage {
-        background: #ebeef3 url(../../images/personal_profiles_launch2.png) 50% -18px /
-            auto 98% no-repeat;
-        width: 100%;
         height: 110px;
-        opacity: 1;
-        transition-delay: 0.1s;
-        margin: 14px 0 0px;
-        padding: 4px 0px;
+        margin: -4px 0 24px 8px;
+        transition: opacity 0.6s;
+
+        img {
+            height: 110%;
+            width: auto;
+        }
     }
 
     .titlesAndButtons {
@@ -480,10 +483,14 @@ span {
     }
 }
 
-@media screen and (max-width: 620px) {
+@media screen and (max-width: 540px) {
     .announcementBanner {
+        .titles {
+            padding: 0 12px;
+        }
+
         .mainTitle {
-            font-size: 0.9em;
+            font-size: 1.1em;
             padding: 0px 0.6em 0.6em;
         }
 
@@ -491,6 +498,11 @@ span {
             font-size: 62%;
             line-height: 1.15em;
             padding: 0 12px;
+        }
+
+        .bannerImage {
+            height: 80px;
+            margin-bottom: 40px;
         }
     }
 }
