--- a/styles/css/banner-pp.css
+++ b/styles/css/banner-pp.css
@@ -131,7 +131,10 @@ span.smallSpace {
   .announcementBanner .bannerImage {
     height: 110px;
     margin: -4px 0 24px 8px;
-    transition: opacity 0.6s; }
+    transition: opacity 0.6s;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
     .announcementBanner .bannerImage img {
       height: 110%;
       width: auto; }
