--- a/styles/scss/banner-pp.scss
+++ b/styles/scss/banner-pp.scss
@@ -178,6 +178,9 @@ span {
         height: 110px;
         margin: -4px 0 24px 8px;
         transition: opacity 0.6s;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
         img {
             height: 110%;
