--- a/styles/scss/banner-pp.scss
+++ b/styles/scss/banner-pp.scss
@@ -158,7 +158,6 @@ span {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-end;
     text-align: left;
     background: #ebeef3;
     font-weight: 300;
@@ -175,30 +174,32 @@ span {
     }
 
     .bannerImage {
-        height: 110px;
-        margin: -4px 0 24px 8px;
-        transition: opacity 0.6s;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        height: 244px;
+        width: 360px;
+        position: absolute;
+        bottom: 0;
+        right: 0;
 
         img {
-            height: 110%;
+            height: 100%;
             width: auto;
         }
     }
 
     .titlesAndButtons {
+        flex: 1;
+        position: relative;
+        width: 100%;
+        max-width: 620px;
+        box-sizing: border-box;
+        padding: 40px 20px 0;
         display: flex;
         flex-direction: column;
-        box-sizing: border-box;
-        justify-content: center;
     }
 
     .titles {
         box-sizing: border-box;
         line-height: 1.15em;
-        text-align: center;
         font-weight: 600;
         color: #3f3c4f;
 
@@ -209,17 +210,22 @@ span {
 
     .mainTitle {
         line-height: 1.1em;
-        padding: 0px 0 0.3em;
-        font-size: 1.225em;
+        padding: 0px 0 0.5em;
+        font-size: 1.3em;
         font-weight: 700;
         color: #e84e0f;
     }
 
     .surOrSubTitle {
-        font-size: 70%;
-        line-height: 1.25em;
-        font-weight: 600;
-        max-width: 582px;
+        font-size: 73%;
+        margin-bottom: 0.8em;
+        font-weight: 400;
+        line-height: 1.1em;
+        max-width: 332px;
+
+        &.small {
+            font-size: 64%;
+        }
 
         .standOut {
             font-weight: 600;
@@ -486,27 +492,49 @@ span {
     }
 }
 
+@media screen and (max-width: 600px) {
+    .announcementBanner .bannerImage {
+        height: 200px;
+        right: 20px;
+        width: 295px;
+    }
+}
+
 @media screen and (max-width: 540px) {
     .announcementBanner {
-        .titles {
-            padding: 0 12px;
+        .titlesAndButtons {
+            padding-top: 28px;
         }
 
         .mainTitle {
-            font-size: 1.1em;
-            padding: 0px 0.6em 0.6em;
+            font-size: 1.15em;
         }
 
         .surOrSubTitle {
             font-size: 62%;
             line-height: 1.15em;
-            padding: 0 12px;
+            padding: 0 124px 0 0;
+            max-width: unset;
         }
 
         .bannerImage {
-            height: 80px;
-            margin-bottom: 40px;
+            right: 0;
+            transform: translateX(44px) rotate(-46deg);
+            height: 200px;
+            bottom: -8px;
         }
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .announcementBanner .bannerImage {
+        bottom: -44px;
+    }
+}
+
+@media screen and (max-width: 420px) {
+    .announcementBanner .mainTitle {
+        font-size: 0.95em;
     }
 }
 
